--- a/app/assets/stylesheets/bo/application.css.scss
+++ b/app/assets/stylesheets/bo/application.css.scss
@@ -8,7 +8,6 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require_self
  * Change "require_tree ." for "require_directory ." for discard the bo
  * If you add more dire you need add new lines for "require_directory exemple_dir_name"
  *= require_directory .
@@ -16,6 +15,7 @@
  *= require selectize
  *= require selectize.bootstrap3
  *= require ../magnific-popup/main
+ *= require_self
  */
 
 $navbar-inverse-bg: #343434;
@@ -27,6 +27,15 @@ $navbar-inverse-link-active-bg: #222222;
 
 body {
   padding-top: 50px;
+}
+
+pre {
+  word-break: normal;
+  word-wrap: normal;
+  margin: .5em 0 2em 0;
+  &[class*="language-"] {
+    margin: .5em 0 2em 0;
+  }
 }
 
 #header{
